bug solved
